// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestCases basic-type-error 1`] = `
Object {
  "errors": Array [
    "xfile
Type '\\"test\\"' is not assignable to type 'number'.",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases basic-type-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases css-modules-error 1`] = `
Object {
  "errors": Array [
    "xfile
Property 'test' does not exist on type 'typeof \\"xfile'.",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases css-modules-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases ignore-child-compiler-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases skip-type-check-on-build-error 1`] = `
Object {
  "errors": Array [
    "./.tmp/testCases/skip-type-check-on-build-error/src/entry.ts
[37m([39m[36m3[39m,[36m1[39m): [31merror TS1005: '{' expected.[39m",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases ts-dependency-only-error 1`] = `
Object {
  "errors": Array [
    "xfile
Class 'TestImpl' incorrectly implements interface 'Test'.
  Property 'doStuff' is missing in type 'TestImpl'.",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases ts-dependency-only-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases tslint-error 1`] = `
Object {
  "errors": Array [
    "xfile
' should be \\"",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases tslint-warning 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "xfile
' should be \\"",
  ],
}
`;

exports[`TestCases use-library-type-definition-error 1`] = `
Object {
  "errors": Array [
    "xfile
Could not find a declaration file for module 'react'. 'xfile' implicitly has an 'any' type.",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases use-library-type-definition-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;
